Add gallery layout

--- a/src/index.html
+++ b/src/index.html
@@ -4,22 +4,42 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kodchasan&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kodchasan&display=swap"
+      rel="stylesheet"
+    />
     <title>Disney Wiki</title>
   </head>
   <body>
     <header>
-      <img src="https://imgs.search.brave.com/X_vMcUSSYdGMJg7fI9N8krthFFLFRH4NNg4OqSwh0aY/rs:fit:962:639:1/g:ce/aHR0cHM6Ly93d3cu/cG5nYWxsLmNvbS93/cC1jb250ZW50L3Vw/bG9hZHMvMjAxOC8w/NS9EaXNuZXktTG9n/by1QTkctRmlsZS1E/b3dubG9hZC1GcmVl/LnBuZw" alt="disney logo" width="80" height="auto">
+      <img
+        src="https://imgs.search.brave.com/X_vMcUSSYdGMJg7fI9N8krthFFLFRH4NNg4OqSwh0aY/rs:fit:962:639:1/g:ce/aHR0cHM6Ly93d3cu/cG5nYWxsLmNvbS93/cC1jb250ZW50L3Vw/bG9hZHMvMjAxOC8w/NS9EaXNuZXktTG9n/by1QTkctRmlsZS1E/b3dubG9hZC1GcmVl/LnBuZw"
+        alt="disney logo"
+        width="80"
+        height="auto"
+      />
       <ul>
         <li><a href="index.html">Characters</a></li>
         <li><a href="#">Movies</a></li>
         <li><a href="#">Games</a></li>
       </ul>
     </header>
+    <section class="gallery">
+      <section class="character-card">
+        <div class="frame">
+          <img src="" alt="character" />
+        </div>
+        <header class="card-header">
+          <h3 class="name">Character</h3>
+          <button type="button" class="like-btn">Like</button>
+        </header>
+        <button type="button" class="comment-btn">Comment</button>
+      </section>
+    </section>
     <footer>
-      <hr>
+      <hr />
       <p>Created by Microverse under CC License</p>
     </footer>
   </body>
