Get and display images

--- a/src/index.html
+++ b/src/index.html
@@ -29,12 +29,12 @@
     <section class="gallery">
       <section class="character-card">
         <div class="frame">
-          <img src="" alt="character" />
+          <img class="card-img" src="" alt="character" />
         </div>
-        <header class="card-header">
+        <div class="card-header">
           <h3 class="name">Character</h3>
           <button type="button" class="like-btn">Like</button>
-        </header>
+        </div>
         <button type="button" class="comment-btn">Comment</button>
       </section>
     </section>
