Add a comment feching function

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
          </div>
          <div class="comment-section">
          <h3>Comments(2)</h3>
-         <p>03/11/2021 Alex: I'd love to play this game.</p>
+         <p>03/11/2021 <span class="username"></span>: <span class="comment"></span></p>
          <p>03/12/2021 Mia: I love it.</p>
          </div>
       <h3>Add a comment</h3>
