Add loading text and change title

--- a/src/index.html
+++ b/src/index.html
@@ -14,17 +14,11 @@
       src="https://kit.fontawesome.com/9d6e6aaa13.js"
       crossorigin="anonymous"
     ></script>
-    <title>8Bit Buddies</title>
+    <title>Pixel Bros</title>
   </head>
   <body>
     <header>
-      <h1 class="logo">8Bit Buddies</h1>
-      <!-- <img
-        src="https://imgs.search.brave.com/X_vMcUSSYdGMJg7fI9N8krthFFLFRH4NNg4OqSwh0aY/rs:fit:962:639:1/g:ce/aHR0cHM6Ly93d3cu/cG5nYWxsLmNvbS93/cC1jb250ZW50L3Vw/bG9hZHMvMjAxOC8w/NS9EaXNuZXktTG9n/by1QTkctRmlsZS1E/b3dubG9hZC1GcmVl/LnBuZw"
-        alt="disney logo"
-        width="80"
-        height="auto"
-      /> -->
+      <h1 class="logo">Pixel Bros</h1>
       <ul>
         <li><a href="index.html">Characters</a></li>
         <li><a href="#">Movies</a></li>
@@ -59,7 +53,7 @@
     </section>
     <section class="error-page hide">
       <h2>🙁ops!</h2>
-      <p>Something went wrong when fetching the API.</p>
+      <p>Something went wrong while fetching the API.</p>
       <p>Please refresh the page.</p>
       <button
         type="button"
@@ -71,7 +65,7 @@
     </section>
     <section class="gallery">
       <!-- This section will load dynamically  -->
-      <p>Loading...</p>
+      <p class="loading-text">📡 Getting data from API ...</p>
       <!-- <section class="character-card">
         <div class="frame">
           <img class="card-img" src="" alt="character" />
