--- a/src/index.html
+++ b/src/index.html
@@ -42,8 +42,9 @@
           <h3>Add a comment</h3>
           <div class="comment-form">
             <form action="#">
-              <input type="text" class="name" placeholder="Enter your name" />
-              <textarea class="comment" placeholder="Enter Comment"></textarea>
+              <input type="text" id="name" placeholder="Enter your name" required/>
+              <textarea id="comment" placeholder="Enter Comment" required></textarea>
+              <p id="success-message"></p>
               <input type="submit" class="submit" value="Comment" />
             </form>
           </div>
