Add number of comments counter

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
             <p class="label">Game Series: <span class="game-series"></span></p>
           </div>
           <div class="comment-section">
-            <h3>Comments(2)</h3>
+            <h3>Comments(<span id="number-of-comments"></span>)</h3>
             <ul class="new-comment"></ul>
           </div>
           <h3>Add a comment</h3>
