Add an error message to empty fild submissions

--- a/src/index.html
+++ b/src/index.html
@@ -42,9 +42,10 @@
           <h3>Add a comment</h3>
           <div class="comment-form">
             <form action="#">
-              <input type="text" id="name" placeholder="Enter your name" required/>
-              <textarea id="comment" placeholder="Enter Comment" required></textarea>
+              <input type="text" id="name" placeholder="Enter your name" />
+              <textarea id="comment" placeholder="Enter Comment"></textarea>
               <p id="success-message"></p>
+              <p id="error-message"></p>
               <input type="submit" class="submit" value="Comment" />
             </form>
           </div>
