--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,9 @@
     <header>
       <h1 class="logo">Pixel Bros</h1>
       <ul>
-        <li><a href="index.html">Characters</a></li>
+        <li>
+          <a href="index.html">Characters (<span id="item-count">0</span>)</a>
+        </li>
         <li><a href="#">Movies</a></li>
         <li><a href="#">Games</a></li>
       </ul>
@@ -42,8 +44,17 @@
           <h3>Add a comment</h3>
           <div class="comment-form">
             <form action="#">
-              <input type="text" id="name" placeholder="Enter your name" required/>
-              <textarea id="comment" placeholder="Enter Comment" required></textarea>
+              <input
+                type="text"
+                id="name"
+                placeholder="Enter your name"
+                required
+              />
+              <textarea
+                id="comment"
+                placeholder="Enter Comment"
+                required
+              ></textarea>
               <p id="success-message"></p>
               <input type="submit" class="submit" value="Comment" />
             </form>
