Customize header design

--- a/src/index.html
+++ b/src/index.html
@@ -17,15 +17,18 @@
     <title>Pixel Bros</title>
   </head>
   <body>
-    <header>
-      <h1 class="logo">Pixel Bros</h1>
-      <ul>
+    <header class="page-header">
+      <h1 class="logo">
+        <a href="#"><i class="fa-solid fa-gamepad"></i><b> PixelBros</b></a>
+      </h1>
+      <ul class="nav">
         <li>
-          <a href="index.html">Characters (<span id="item-count">0</span>)</a>
+          <a href="index.html" class="nav-link active">Characters</a>
         </li>
-        <li><a href="#">Movies</a></li>
-        <li><a href="#">Games</a></li>
+        <li><a href="#" class="nav-link">Series</a></li>
+        <li><a href="#" class="nav-link">Games</a></li>
       </ul>
+      <p class="total-box">Total Items <span id="item-count">10</span></p>
     </header>
     <section class="popup">
       <div class="popup-container">
