--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,9 @@
         <li><a href="#" class="nav-link">Series</a></li>
         <li><a href="#" class="nav-link">Games</a></li>
       </ul>
-      <p class="total-box">Total Items <span id="item-count">10</span></p>
+      <p class="total-box">
+        <span class="label">Total Items </span><span id="item-count">10</span>
+      </p>
     </header>
     <section class="popup">
       <div class="popup-container">
@@ -77,8 +79,11 @@
     </section>
 
     <footer>
-      <hr />
-      <p>Created by Microverse under CC License</p>
+      <p>
+        Created by <a href="https://github.com/AmanWorku">AmanWorku</a> &
+        <a href="https://github.com/IndieCoderMM">IndieCoderMM</a> for
+        Microverse Capstone Project
+      </p>
     </footer>
   </body>
 </html>
