--- a/index.html
+++ b/index.html
@@ -80,9 +80,13 @@
 
     <footer>
       <p>
-        Created by <a href="https://github.com/AmanWorku">AmanWorku</a> &
-        <a href="https://github.com/IndieCoderMM">IndieCoderMM</a> for
-        Microverse Capstone Project
+        Created by
+        <a href="https://github.com/AmanWorku" class="github-link">AmanWorku</a>
+        &
+        <a href="https://github.com/IndieCoderMM" class="github-link"
+          >IndieCoderMM</a
+        >
+        for Microverse Capstone Project
       </p>
     </footer>
   </body>
