--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="popup-container">
         <img class="popup-img" src="" alt="" />
         <div class="popup-content">
-          <button class="close-btn">X</button>
+          <button class="close-btn">&times;</button>
           <h2 class="pop-name"></h2>
           <div class="description">
             <p class="label">Series: <span class="series"></span></p>
