--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
   <body>
     <header class="page-header">
       <h1 class="logo">
-        <a href="#"><i class="fa-solid fa-gamepad"></i><b> PixelBros</b></a>
+        <a href="index.html"
+          ><i class="fa-solid fa-gamepad"></i><b> PixelBros</b></a
+        >
       </h1>
       <ul class="nav">
         <li>
@@ -40,7 +42,7 @@
       <div class="popup-container">
         <img class="popup-img" src="" alt="" />
         <div class="popup-content">
-          <button class="close-btn">&times;</button>
+          <button class="close-btn">X</button>
           <h2 class="pop-name"></h2>
           <div class="description">
             <p class="label">Series: <span class="series"></span></p>
